--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shuffle-package-maker",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Shuffle allows you to upload your favorite purchased UI libraries (e.g., Tailwind UI, Flowbite) or one you made.",
   "main": "generate.mjs",
   "author": "efanpl",
@@ -22,5 +22,8 @@
   },
   "bin": {
     "shuffle-package-maker": "generate.mjs"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
